I added a buy me a coffee button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
     <link rel="stylesheet" href="css/output.css" />
   </head>
-  <body class="p-0 h-full">
+  <body
+    class="m-0 h-full bg-gradient-to-br from-blue-600 via-blue-500 to-blue-400"
+  >
     <div
-      class="flex flex-col justify-start items-center bg-gradient-to-br from-blue-600 via-blue-500 to-blue-400 h-screen w-screen p-12"
+      class="flex flex-col justify-start items-center h-screen w-screen p-12"
     >
       <h1 class="text-xl md:text-2xl text-white mb-8 font-semibold text-center">
         QUI⚡ FOR SOFTWARE ENGINEERS
@@ -260,6 +262,15 @@
         <span class="text-4xl mb-5">&#128175;</span>
         <p class="my-5">Well-done !</p>
         <a href="" class="retry-btn text-blue-500 underline">Give it a retry</a>
+      </div>
+
+      <div class="flex mt-5 absolute right-3 bottom-2">
+        <a href="https://www.buymeacoffee.com/daviddappa" target="_blank"
+          ><img
+            class="h-20 w-44"
+            src="img/bmc-full-logo-no-background.png"
+            alt=""
+        /></a>
       </div>
     </div>
 
